source/objects/Twilio_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Stores information related to Twilio. Phone numbers, Account Sid, Auth Token, etc.</description>
    <fields>
        <fullName>Account_Sid__c</fullName>
        <inlineHelpText>Twilio Account SID.</inlineHelpText>
        <label>Account Sid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auth_Token__c</fullName>
        <inlineHelpText>Twilio Auth Token.</inlineHelpText>
        <label>Auth Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Phone__c</fullName>
        <inlineHelpText>The Twilio phone number that will be used to send and receive SMS Messages.</inlineHelpText>
        <label>Primary Phone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Twilio_Status_Listen_Page__c</fullName>
        <inlineHelpText>URL of sites page for smsStatusListen Visualforce page.</inlineHelpText>
        <label>Twilio Status Listen Page</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Unsubscribe_Keywords__c</fullName>
        <inlineHelpText>Comma separated list of words that if user responds with will uncheck the SMS Enalbed field on Contact.</inlineHelpText>
        <label>Unsubscribe Keywords</label>
        <type>TextArea</type>
    </fields>
    <label>Twilio Settings</label>
</CustomObject>